add endpoint for verifying email token
