# swagger/swagger.yaml
@@ -1899,6 +1899,11 @@ components:
       - message
       - url
       type: object
+    server.verifyEmailRequest:
+      properties:
+        token:
+          type: string
+      type: object
     server.workspaceOverviewResponse:
       properties:
         contacts:
@@ -2015,6 +2020,44 @@ paths:
               schema:
                 $ref: '#/components/schemas/server.APIStatus'
           description: Unauthorized
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/server.APIStatus'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/server.APIStatus'
+          description: Internal Server Error
+      tags:
+      - auth
+  /auth/verify-email:
+    post:
+      description: Verify email address using verification token
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/server.verifyEmailRequest'
+        description: verification token
+        required: true
+        x-originalParamName: message
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/server.APIStatus'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/server.APIStatus'
+          description: Bad Request
         "404":
           content:
             application/json:
